# debugger-enhanced-code-completion

./: .gitignore  README.md  apply_patch.py  completion_model.py  demo_tmp.txt  evaluation_report_20250507_033515.json  evaluation_report_20250507_091251.json  evaluation_report_20250507_093249.json  evaluation_report_20250507_094037.json  flake.nix  generate_prompt.py  llm_interface.py  main.py  notes.txt  old_main.py  package-lock.json  package.json  process_debug_info.py  report.xml  run_automated_testing.py  shell.nix  structure.temp.md  test_calculator.py
backend/: .server.py.swp  README.md  apply_patch.py  debug_capture.py  main.py  mock_llm.py  pyproject.toml  runner.py  server.py
backend/src/: server.py
backend/src/pytest_smart_debugger_server/: .server.py.swp  apply_patch.py  completion_model.py  server.py
benchmarks/: .run_automated_testing.py.swp  run_automated_testing.py
code_completion_results/: code_1746603637.py  response_1747686186.txt  response_1747686212.txt  response_1747686333.txt  response_1747686669.txt  response_1747686885.txt  response_1747687055.txt  response_1747687096.txt  response_1747956417.txt  response_1747956615.txt  response_1747992877.txt
example/: functions.py  target.py  test_add.py  test_target.py  test_tax_func.py
example_dump/: dump_for_some_function.txt
experiment_runs/: dump_for_some_function.txt  trace_test_arithmetic.py_test_average_1746603602.json  trace_test_arithmetic.py_test_average_1746603755.json  (+12 more)
infra/: pyproject.toml
infra/src/infra/: __init__.py  llm_connector.py
libs/: env.py  log.py
src/: patch.ts  (+5 more)
(+126 files in other folders)
