[project]
name = "infra"
version = "0.0.1"
description = "Cross-cutting infrastructure adapters (LLM connector, etc.) for the smart-debugger monorepo."
authors = [{ name = "Tymofii Shchetilin" }]
dependencies = ["openai", "python-dotenv", "pyyaml"]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
infra = ["*.yaml"]

